# ice-floe-tracker-pipeline

./: .dockerignore  .gitattributes  .gitignore  .spacerc  .tool-versions  Conda.Dockerfile  DEVELOPMENT.md  Dockerfile  Manifest.toml  Project.toml  README.md  all-cases.csv  example.sh  flow-example.cylc  flow.cylc  requirements.txt  rose-suite.conf  soit.Dockerfile
.devcontainer/: Dockerfile  devcontainer.json
.github/: codecov.yml  dependabot.yml
.github/workflows/: CompatHelper.yml  build-docker-ebseg.yml  build-docker-fetchdata.yml  build-docker-julia.yml  build-docker-soit.yml  build-docker.yml  docker-soit-build.yml  manual_trigger.yml  test-soit.yml  test.yml
IFTPipeline.jl/: Manifest.toml  Project.toml  README.md
IFTPipeline.jl/scripts/: setup-python.jl
IFTPipeline.jl/src/: IFTPipeline.jl  cli-config.jl  cli.jl  feature-extraction.jl  h5.jl  landmask.jl  preprocess.jl  regionprops-labeled.jl  rotation.jl  rotations.jl  soit-parser.jl  tracker.jl  vectors.jl
IFTPipeline.jl/test/: .gitignore  Project.toml  _test-cli.sh  _test-preprocess.jl  _test-track.jl  config.jl  example.h5  runtests.jl  test-feature-extract.jl  test-h5.jl  test-pipeline.jl  test-preprocess.jl  test-regionprops-labeled.jl  test-rotate.jl  test-tracker.jl
PythonSetup.jl/: Python.yaml  setup.jl
PythonSetupForIFTPipeline.jl/: .gitignore  Manifest.toml  Project.toml  README.md  environment.yaml  setup.jl
config/: flow_template.j2  ift-env.yaml  sample_site_locations.csv  site_locations.csv
config/cylc/: README.md  flow.cylc  rose-suite.conf
config/cylc_hpc/: flow.cylc  flow_template_hpc.j2  global.cylc
config/cylc_local/: flow.cylc  flow_template_local.j2
config/cylc_template/: flow.j2
config/example_files/: sample-tracker-params.toml  site_locations.csv
config/hpc/: oscar-env.yaml
configurations/: beaufort_sea.conf  beaufort_sea_july.conf  fram_strait_june.conf  ne_greenland.conf
csvjoin/: .gitignore  README.md  csvjoin.py  pyproject.toml
csvjoin/test/: data_with_Z.csv  data_without_Z.csv  expected-output.csv  times.csv
cylc/: README.md  cylc-batch.sh  flow.cylc  global.cylc  rose-suite.conf
cylc/example/: iftpipeline-test-case.conf  ne-greenland.conf  ne_greenland.conf
cylc/meta/: rose-meta.conf
ebseg/: Dockerfile
fetchdata/: fetchdata.sh
flow-generator/: flow_generator.py
label-colorizer/: label_colorizer.py  pyproject.toml
labeler/: README.md  labeler.py  pyproject.toml
lib/: pass_time.py
meta/: rose-meta.conf
non-floe-masker/: non_floe_masker.py  pyproject.toml
resources/: README.md
results/: README.md
satellite-overpass-identification-tool/: .gitignore  Dockerfile  README.md  pass_time_cylc.py  pyproject.toml  satellite-overpass-identification-tool.py  satellite_overpass_identification_tool.py  single_overpass_selector.py
satellite-overpass-identification-tool/src/satellite_overpass_identification_tool/: satellite_overpass_identification_tool.py
script/: test-IFTPipeline.jl-cli.sh
script/input_data/: 20220914.aqua.truecolor.250m.tiff  landmask.tiff
src/: IFTPipeline.jl  cli-config.jl  feature-extraction.jl  h5.jl  ice-floe-tracker-pipeline.jl  latlon.py  preprocess.jl  sites-parser.jl  soit-parser.jl  track-docstring.jl  tracker.jl
src/.ipynb_checkpoints/: h5-checkpoint.jl  preprocess-checkpoint.jl  track-docstring-checkpoint.jl  tracker-checkpoint.jl
test/: Project.toml  README.md  _test-preprocess.jl  _test-track.jl  config.jl  runtests.jl  test-IFTPipeline.jl-cli.sh  test-h5.jl  test-overcast.jl  test-pipeline.jl  test-pydeps.jl
test/.ipynb_checkpoints/: _test-track-checkpoint.jl  config-checkpoint.jl  test-h5-checkpoint.jl
test/input_data/: 20220914.terra.truecolor.250m.tiff
util/: get_fullnames.py  template.py
workflow/: README.md  example-cylc-calls.sh  flow.cylc  global.cylc  oscar.global.cylc  rose-suite.conf
workflow/config/: README.md  sample_site_locations.csv
workflow/ebseg/: Dockerfile
(+127 files in other folders)
