[project]
name = "csvjoin"
version = "0.1.0"
description = "Utility to join two csv files."
requires-python = ">=3.10"
authors = [{ name = "John G. Holland", email = "john_holland1@brown.edu" }]


classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["typer", "pandas"]

[project.scripts]
csvjoin = "csvjoin:app"

[build-system]
requires = ["setuptools>=43.0.0", "wheel", "hatchling"]
build-backend = "hatchling.build"
