[project]
name = "label-colorizer"
version = "0.1.0"
description = "Utility to generate more easily human readable versions of label images"
requires-python = ">=3.11"
authors = [
  { name = "John G. Holland", email = "john_holland1@brown.edu" },
]


classifiers = [ # TODO: update these
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "rasterio>=1.3.0",
  "numpy >=1.26, <2.0.0",
  "typer",
  "tqdm"
]

[project.scripts]
colorize = "label_colorizer:app"


[build-system]
requires = ["setuptools>=43.0.0", "wheel","hatchling"]
build-backend = "hatchling.build"