[project]
name = "non-floe-masker"
dynamic = ["version"]
description = "Utility to generate more easily human readable versions of floe label images"
requires-python = ">=3.11"
authors = [
  { name = "John G. Holland", email = "john_holland1@brown.edu" },
]


# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [ # TODO: update these
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS",


  # Pick your license as you wish
  # TODO: update license
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
dependencies = [ # Optional
  "rasterio>=1.3.0, <2.0.0",
  "numpy >=1.26, <2.0.0",
  "typer >=0.12.3, <1.0.0",
]

[project.optional-dependencies] # Optional
test = [
  "pytest",
]

[project.scripts] # Optional
fsdproc = "ebfloeseg.app:app" # TODO: choose better name?


[build-system]
requires = ["setuptools>=43.0.0", "wheel","hatchling"]
build-backend = "hatchling.build"